# ChangeLog for net-firewall/shorewall-lite
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-lite/ChangeLog,v 1.34 2008/04/01 05:16:21 pva Exp $

*shorewall-lite-4.0.10 (01 Apr 2008)

  01 Apr 2008; Peter Volkov <pva@gentoo.org> +shorewall-lite-4.0.10.ebuild:
  Version bump, bug #215548, thank Vieri <rentorbuy AT yahoo.com> for
  maintaining!

*shorewall-lite-3.4.8 (02 Mar 2008)

  02 Mar 2008; <pva@gentoo.org> +shorewall-lite-3.4.8.ebuild:
  Version bump, bug #212067. Thank Vieri for report.

  27 Feb 2008; Raúl Porcel <armin76@gentoo.org>
  shorewall-lite-3.4.7.ebuild:
  sparc stable wrt #210902

  25 Feb 2008; <pva@gentoo.org> shorewall-lite-4.0.9.ebuild:
  Don't depend on shorewall-shell by default, bug #211321, thank you Stefan
  Wimmer for report and Vieri for the fix.

  25 Feb 2008; Jeroen Roovers <jer@gentoo.org> shorewall-lite-3.4.7.ebuild:
  Stable for HPPA (bug #210902).

  24 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  shorewall-lite-3.4.7.ebuild:
  stable x86, bug 210902

*shorewall-lite-4.0.9 (24 Feb 2008)

  24 Feb 2008; <pva@gentoo.org> +shorewall-lite-4.0.9.ebuild:
  Version bump, bug 211191. Thank Vieri <rentorbuy AT yahoo.com> for all work!

*shorewall-lite-4.0.8 (27 Jan 2008)

  27 Jan 2008; Markus Ullmann <jokey@gentoo.org>
  +shorewall-lite-4.0.8.ebuild:
  Version bump, thanks to Vieri for the notification in bug #196695

  14 Nov 2007; Peter Weller <welp@gentoo.org> shorewall-lite-3.4.6.ebuild:
  Stable on amd64 wrt bug 191475

*shorewall-lite-3.4.7 (10 Nov 2007)

  10 Nov 2007; Martin Jackson <mjolnir@gentoo.org>
  +shorewall-lite-3.4.7.ebuild:
  Bump for #198603

  14 Sep 2007; Ferris McCormick <fmccor@gentoo.org>
  shorewall-lite-4.0.3.ebuild:
  Add ~sparc keyword --- related to Bug #191624

  09 Sep 2007; Jeroen Roovers <jer@gentoo.org> shorewall-lite-4.0.3.ebuild:
  Marked ~hppa too.
