@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall/Attic/shorewall-3.4.8.ebuild,v 1.3 2008/04/07 19:27:42 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall/Attic/shorewall-3.4.8.ebuild,v 1.4 2008/04/10 08:38:12 jer Exp $
 
 inherit eutils
 
@@ -15,7 +15,7 @@ SRC_URI="http://www1.shorewall.net/pub/${PN}/${MY_P_TREE}/${P}/${P}.tgz
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="alpha ~amd64 ~hppa ~mips ~ppc ppc64 ~sparc ~x86"
+KEYWORDS="alpha ~amd64 hppa ~mips ~ppc ppc64 ~sparc ~x86"
 IUSE="doc"
 
 DEPEND=">=net-firewall/iptables-1.2.4
