@@ -1,6 +1,9 @@
 # ChangeLog for net-firewall/shorewall
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall/ChangeLog,v 1.163 2008/04/07 19:27:42 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall/ChangeLog,v 1.164 2008/04/10 08:38:12 jer Exp $
+
+  10 Apr 2008; Jeroen Roovers <jer@gentoo.org> shorewall-3.4.8.ebuild:
+  Stable for HPPA (bug #216224).
 
   07 Apr 2008; Tobias Klausmann <klausman@gentoo.org>
   shorewall-3.4.8.ebuild:
